--- a/css/main.css
+++ b/css/main.css
@@ -22,9 +22,10 @@ h2 {
 
 nav {
   color: #8f2440;
-  font-size: 1.125rem;
+  font-size: 1.5rem;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
+  list-style: none;
 }
 
 figcaption {
@@ -43,6 +44,7 @@ blockquote {
   font-size: 1.5rem;
   font-style: italic;
   text-align: center;
+  font-weight: normal;
 }
 
 .chris {
@@ -51,7 +53,7 @@ blockquote {
 }
 
 h2 ol {
-  list-style-type: lower-greek;
+  list-style: georgian;
 }
 
 h2 p {
