--- a/css/main.css
+++ b/css/main.css
@@ -53,11 +53,11 @@ blockquote {
 }
 
 h2 ol {
-  list-style: georgian;
+  list-style-type: lower-alpha;
 }
 
 h2 p {
- font-style: italic;
+  font-style: italic;
 }
 
 dl dt {
