--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@ html {
   background-color: #c9b5ab;
   font-family: "PT Serif", serif;
   font-size: 1.125rem;
-  line-height: 1.5;
+  line-height: 1.125;
   color: #222;
   font-weight: normal;
 }
@@ -17,15 +17,15 @@ h2 {
   color: #3f1622;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.125rem;
 }
 
 nav {
   color: #8f2440;
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
-  list-style: none;
+  list-style: unset;
 }
 
 figcaption {
@@ -37,7 +37,7 @@ figcaption {
 
 .info {
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.125rem;
 }
 
 blockquote {
