Take numbers off ordered list

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ nav {
   font-size: 1.125rem;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
-  list-style: unset;
+  list-style-type: none;
 }
 
 figcaption {
