--- a/css/main.css
+++ b/css/main.css
@@ -12,12 +12,18 @@ img {
   text-align: center;
 }
 
-h1,
-h2 {
+h1 {
   color: #3f1622;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
   font-size: 1.5rem;
+}
+
+h2 {
+  color: #3f1622;
+  font-family: "PT Sans", sans-serif;
+  font-weight: bold;
+  font-size: 1.125rem;
 }
 
 .nurv {
@@ -30,7 +36,7 @@ h2 {
 }
 
 figcaption {
-  font-size: 1.125rem;
+  font-size: .8rem;
   font-family: "PT Serif", serif;
   font-style: italic;
   text-align: center;
@@ -42,7 +48,7 @@ figcaption {
 }
 
 blockquote {
-  font-size: 1.5rem;
+  font-size: 1.125rem;
   font-style: italic;
   text-align: center;
   font-weight: normal;
