Update navigation list

--- a/css/main.css
+++ b/css/main.css
@@ -12,20 +12,19 @@ img {
   text-align: center;
 }
 
-nav ol {
+a {
+  text-decoration: none;
   color: #8f2440;
   font-size: 1.125rem;
-  text-decoration: none;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
-  list-style-type: none;
 }
 
 h1 {
   color: #3f1622;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
-  font-size: 1.5rem;
+  font-size: 1.125rem;
 }
 
 h2 {
