--- a/css/main.css
+++ b/css/main.css
@@ -13,11 +13,12 @@ img {
 }
 
 a {
-  text-decoration: none;
   color: #8f2440;
   font-size: 1.125rem;
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
+  text-decoration: none;
+  list-style-type:none;
 }
 
 h1 {
