--- a/css/main.css
+++ b/css/main.css
@@ -18,7 +18,7 @@ a {
   font-family: "PT Sans", sans-serif;
   font-weight: bold;
   text-decoration: none;
-  list-style-type:none;
+  list-style: none;
 }
 
 h1 {
